--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>utryui-vue-doc</title>
+    <link rel="bookmark" type="image/x-icon" href="./static/logo.png"/>
+    <link rel="shortcut icon" href="./static/logo.png">
+    <link rel="icon" href="./static/logo.png">
   </head>
   <body>
     <div id="app"></div>
