--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type=text/javascript src=/static/performanceTest.js></script>
   </body>
 </html>
